--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Not Found</title>
-        <link rel="stylesheet" href="/Personal-Website_ALPHA/CSS/404.css"> 
+        <link rel="stylesheet" href="CSS/404.css"> 
 
     </head>
 
@@ -18,13 +18,13 @@
         <p> <span id="errorMessage"></span><span id="errorMessageURL"></span></p>
         <p data-translate="try_these">Probieren sie es mit Diesen URLs</p>
         
-        <p><span data-translate="home">Home</span>: <a href="/Personal-Website_ALPHA/index.html">https://jonascool05.github.io/Personal-Website_ALPHA/index.html</a> </p>
-        <p> <span data-translate="about_me">Über Mich</span>: <a href="/Personal-Website_ALPHA/pages/Uber_Mich.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Uber_Mich.html</a> </p>
-        <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="/Personal-Website_ALPHA/pages/Lebenslauf.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Lebenslauf.html</a> </p>
-        <p> <span>Design</span>: <a href="/Personal-Website_ALPHA/pages/Design.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Design.html</a> </p>
-        <p> <span data-translate="contact">Kontakt:</span>: <a href="/Personal-Website_ALPHA/pages/Kontakt.html">https://jonascool05.github.io/Personal-Website_ALPHA/pages/Kontakt.html</a> </p>
+        <p><span data-translate="home">Home</span>: <a href="index.html">https://jonascool05.github.io/index.html</a> </p>
+        <p> <span data-translate="about_me">Über Mich</span>: <a href="pages/Uber_Mich.html">https://jonascool05.github.io/pages/Uber_Mich.html</a> </p>
+        <p> <span data-translate="resume">Lebenslauf/Zeugnisse</span>: <a href="pages/Lebenslauf.html">https://jonascool05.github.io/pages/Lebenslauf.html</a> </p>
+        <p> <span>Design</span>: <a href="pages/Design.html">https://jonascool05.github.io/pages/Design.html</a> </p>
+        <p> <span data-translate="contact">Kontakt:</span>: <a href="pages/Kontakt.html">https://jonascool05.github.io/pages/Kontakt.html</a> </p>
 
-        <script src="/Personal-Website_ALPHA/JS/translations.js"></script>
-        <script src="/Personal-Website_ALPHA/JS/translate.js"></script>
+        <script src="JS/translations.js"></script>
+        <script src="JS/translate.js"></script>
 </body>
 </html>
