--- a/pages/Rechtliches.html
+++ b/pages/Rechtliches.html
@@ -52,7 +52,8 @@
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
 			<script src="../JS/translations.js"></script>
-			<script src="../JS/translate.js"></script>
+			<script src="../JS/translation_About_Me.js"></script>
+			<script type="module" src="../JS/translate.mjs"></script>
 			<script src="../JS/gmail_form.js"></script>		
 			
           </body>
