--- a/pages/Uber_Mich.html
+++ b/pages/Uber_Mich.html
@@ -52,7 +52,7 @@
 			<script src="../JS/loading.js"></script>
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
-			<script type="module" src="../JS/Translations.js"></script>
+			<script type="module" src="/JS/Translations.js"></script>
 			<script type="module" src="../JS/translation_About_Me.js"></script>
 			<script type="module" src="../JS/translate.mjs"></script>
 			<script src="../JS/gmail_form.js"></script>
