removed all unneeded js calls

--- a/404.html
+++ b/404.html
@@ -25,6 +25,6 @@
         <p> <span data-translate="contact">Kontakt:</span>: <a href="pages/Kontakt.html">https://jonascool05.github.io/pages/Kontakt.html</a> </p>
 
         <script src="JS/translations.js"></script>
-        <script src="JS/translate.js"></script>
+        <script type="module" src="JS/translate.mjs"></script>
 </body>
 </html>
