--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<script src="JS/loading.js"></script>
 		<script src="JS/orientation.js"></script>
 		<script src="JS/menu.js"></script>
-		<script type="module" src="../JS/translate.mjs"></script>
+		<script type="module" src="JS/translate.mjs"></script>
 
 	</body>
 </html>
