--- a/pages/Design.html
+++ b/pages/Design.html
@@ -23,7 +23,7 @@
 							<div class="nav-icon">&#9776;</div>
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
-							<a href="#Lebenslauf" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
                             <a class="nav-link active" href="#Design">Design</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
