--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -6,6 +6,8 @@
             <title data-translate="resume">Lebenslauf/Zeugnis</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">  
+
+			<script type="module" src="JS/translate.mjs"></script>
         
           </head>
           
@@ -51,7 +53,6 @@
 			<script src="../JS/loading.js"></script>
 			<script src="../JS/orientation.js"></script>
 			<script src="../JS/menu.js"></script>
-			<script type="module" src="../JS/translate.mjs"></script>
 			<script src="../JS/gmail_form.js"></script>
 			
           </body>
