--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         <title>404 Not Found</title>
         <link rel="stylesheet" href="CSS/404.css">
         
-        <script type="module" src="JS/translate.mjs"></script>
+        <script type="module" src="JS/translate.mjs" defer></script>
 
     </head>
 
