--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">           
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/styles.css">
-		
-		<script type="module" src="JS/translate.mjs"></script>
+
+		<script type="module" src="JS/translate.mjs" defer></script>
 
     </head>
           
