--- a/pages/Design.html
+++ b/pages/Design.html
@@ -7,7 +7,7 @@
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="CSS/styles.css">  
 
-			<script type="module" src="JS/translate.mjs"></script>
+			<script type="module" src="../JS/translate.mjs" defer></script>
         
           </head>
           
