changed to a different view of calling translation

--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
         <h1>404 Not Found</h1>
         <hr>
         <div id="language-switcher">
-            <button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
-            <button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+            <button id="deButton" class="button-lang" data-language="de">Deutsch</button>
+            <button id="enButton" class="button-lang" data-language="en">English</button>
         </div>
         <p> <span id="errorMessage"></span><span id="errorMessageURL"></span></p>
         <p data-translate="try_these">Probieren sie es mit Diesen URLs</p>
