--- a/pages/Design.html
+++ b/pages/Design.html
@@ -29,8 +29,8 @@
                             <a class="nav-link active" href="#Design">Design</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
-								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
-								<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+								<button id="deButton" class="button-lang" data-language="de">Deutsch</button>
+								<button id="enButton" class="button-lang" data-language="en">English</button>
 							</div>
 						</div>
 						<span  class="Name">Jonas Gondorf</span>
