--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<a href="pages/Design.html" class="nav-link">Design</a>
 						<a href="pages/Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 						<div id="language-switcher">
-							<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
-							<button onclick="changeLanguage('en')" class="button-lang" data-language="en">English</button>
+							<button id="deButton" class="button-lang" data-language="de">Deutsch</button>
+							<button id="enButton" class="button-lang" data-language="en">English</button>
 						</div>
 					</div>
 					<span  class="Name">Firstname Lastname</span>
