fixed link to GitHub profile

--- a/pages/Kontakt.html
+++ b/pages/Kontakt.html
@@ -61,7 +61,7 @@
 						</form>
 					</div>
 					<div class="Github-Profile">
-						<a class="GitHub-Link" href="https://github.com/jonascool05" target="_blank">
+						<a class="GitHub-Link" href="https://github.com/JC05dev" target="_blank">
 							<img class="GitHub-Logo" src="../assets/images/GitHub_Logo.png" alt="Github Logo">
 						</a>
 					</div>
