--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -23,8 +23,8 @@
 							<div class="nav-icon">&#9776;</div>
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
-							<a class="nav-link active" href="#Lebenslauf" data-translate="resume">Lebenslauf/Zeugnis</a>
-							<a href="Design.html" class="nav-link">Design</a>
+							<a class="nav-link active"data-translate="resume">Lebenslauf/Zeugnis</a>
+							<a href="Projekte.html" class="nav-link" data-translate="projects">Projekte</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
 								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
