--- a/pages/Rechtliches.html
+++ b/pages/Rechtliches.html
@@ -24,7 +24,7 @@
 							<a href="../index.html" class="nav-link" data-translate="home">Home</a>
 							<a href="Uber_Mich.html" class="nav-link" data-translate="about_me">Über Mich</a>
 							<a href="Lebenslauf.html" class="nav-link" data-translate="resume">Lebenslauf/Zeugnis</a>
-							<a href="Design.html" class="nav-link">Design</a>
+							<a href="Projekte.html" class="nav-link" data-translate="projects">Projekte</a>
 							<a href="Kontakt.html" class="nav-link" data-translate="contact">Kontakt</a>
 							<div id="language-switcher">
 								<button onclick="changeLanguage('de')" class="button-lang" data-language="de">Deutsch</button>
