--- a/pages/Projekte.html
+++ b/pages/Projekte.html
@@ -36,7 +36,7 @@
 					</header>
 
 					<main>
-					<span  class="Title">Design</span>
+					<span  class="Title" data-translate="projects">Projekte</span>
 					</main>
 
 					<footer>
