(WIP) adding and displaying pdfs

--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -5,7 +5,9 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title data-translate="resume">Lebenslauf/Zeugnis</title>
             <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+			<link rel="stylesheet" href="CSS/Lebenslauf.css">
             <link rel="stylesheet" href="CSS/styles.css">  
+			
         
           </head>
           
@@ -37,6 +39,12 @@
 
 					<main>
 					<span  class="Title" data-translate="resume">Lebenslauf</span>
+
+					<div class="File-Grid">
+						<span class="Lebenslauf"><embed src="/assets/documents/Jonas Gondorf Lebenslauf.pdf" type="application/pdf"></span>
+						<span class="Zeugnis"><embed src="/assets/documents/Gondorf Jonas Zeugnis Fachhochschulreife _ schulischer Teil.pdf" type="application/pdf"></span>
+					</div>
+
 					</main>
 
 					<footer>
