--- a/pages/Lebenslauf.html
+++ b/pages/Lebenslauf.html
@@ -41,8 +41,8 @@
 					<span  class="Title" data-translate="resume">Lebenslauf</span>
 
 					<div class="File-Grid">
-						<span class="Lebenslauf"><embed src="/assets/documents/Jonas Gondorf Lebenslauf.pdf" type="application/pdf"></span>
-						<span class="Zeugnis"><embed src="/assets/documents/Gondorf Jonas Zeugnis Fachhochschulreife _ schulischer Teil.pdf" type="application/pdf"></span>
+						<div class="Lebenslauf"><embed src="/assets/documents/Jonas Gondorf Lebenslauf.pdf" type="application/pdf"></div>
+						<div class="Zeugnis"><embed src="/assets/documents/Gondorf Jonas Zeugnis Fachhochschulreife _ schulischer Teil.pdf" type="application/pdf"></div>
 					</div>
 
 					</main>
